user signup form design

--- a/Identity/Identity/Views/Home/Index.cshtml
+++ b/Identity/Identity/Views/Home/Index.cshtml
@@ -20,8 +20,8 @@
         <div class="form-group">
             <input asp-for="@Model.Password" class="form-control" />
         </div>
-        <input type="submit" class="btn btn-primary" value="Sign In"/>
-        <small>Don't you have an account? <a asp-action="SignUp" class="btn btn-link">Sign Up</a></small>
+        <input type="submit" class="btn btn-primary btn-sm" value="Sign In"/>
+        <small>Don't you have an account? <a asp-action="SignUp" class="btn btn-link btn-sm">Sign Up</a></small>
     </form>
 </body>
 </html>
