--- a/Identity/Identity/Views/Home/Index.cshtml
+++ b/Identity/Identity/Views/Home/Index.cshtml
@@ -15,9 +15,13 @@
     <form class="w-50 mx-auto p-4 mt-3 shadow" asp-action="SignIn">
         <h4 class="text-center lead">Sign In</h4>
         <div class="form-group">
+            <label asp-for="@Model.UserName"></label>
+            <span asp-validation-for="@Model.UserName" class="text-danger"></span>
             <input asp-for="@Model.UserName" class="form-control" />
         </div>
         <div class="form-group">
+            <label asp-for="@Model.Password"></label>
+            <span asp-validation-for="@Model.Password" class="text-danger"></span>
             <input asp-for="@Model.Password" class="form-control" />
         </div>
         <input type="submit" class="btn btn-primary btn-sm" value="Sign In"/>
