--- a/Identity/Identity/Views/Shared/_Layout.cshtml
+++ b/Identity/Identity/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
                     <a asp-action="UpdateUser" asp-controller="Panel" class="list-group-item list-group-item-action " aria-current="true">
                         Update my profile
                     </a>
-                    <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+                    <a asp-action="Index" asp-controller="Role" class="list-group-item list-group-item-action">Role Operations</a>
                     <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
                     <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
                     <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
