--- a/Identity/Identity/Views/Role/Index.cshtml
+++ b/Identity/Identity/Views/Role/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<a asp-action="AddRole" asp-controller="Role" class="btn btn-info btn-sm my-2" >Add New Role</a>
 <table class="table table-sm table-hover">
     <tr>
         Name
