--- a/Identity/Identity/Views/Role/Index.cshtml
+++ b/Identity/Identity/Views/Role/Index.cshtml
@@ -6,8 +6,10 @@
 <a asp-action="AddRole" asp-controller="Role" class="btn btn-info btn-sm my-2" >Add New Role</a>
 <table class="table table-sm table-hover">
     <tr>
-        Name
+        <td>Name</td>
+        <td>Operation</td>
     </tr>
+    
 
     @if (Model.Count > 0)
     {
@@ -16,6 +18,9 @@
             <tr>
                 <td>
                     @item.Name
+                </td>
+                <td>
+                    <a asp-action="UpdateRole" asp-route-id="@item.Id" class="btn btn-warning btn-sm"> Update</a>
                 </td>
             </tr>
         }
