--- a/Identity/Identity/Views/Role/Index.cshtml
+++ b/Identity/Identity/Views/Role/Index.cshtml
@@ -15,14 +15,16 @@
     {
         foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @item.Name
-                </td>
-                <td>
-                    <a asp-action="UpdateRole" asp-route-id="@item.Id" class="btn btn-warning btn-sm"> Update</a>
-                </td>
-            </tr>
+<tr>
+    <td>
+        @item.Name
+    </td>
+    <td>
+        <a asp-action="UpdateRole" asp-route-id="@item.Id" class="btn btn-warning btn-sm"> Update</a>
+        <a asp-action="DeleteRole" asp-route-id="@item.Id" class="btn btn-danger btn-sm"> Delete</a>
+    </td>
+    
+</tr>
         }
     }
     else
