--- a/Identity/Identity/Views/Shared/_Layout.cshtml
+++ b/Identity/Identity/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                         Update my profile
                     </a>
                     <a asp-action="Index" asp-controller="Role" class="list-group-item list-group-item-action">Role Operations</a>
-                    <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+                    <a asp-action="UserList" asp-controller="Role" class="list-group-item list-group-item-action">User Operations</a>
                     <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
                     <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
                 </div>
