--- a/Identity/Identity/Views/Role/UserList.cshtml
+++ b/Identity/Identity/Views/Role/UserList.cshtml
@@ -7,6 +7,7 @@
 <table class="table table-sm table-hover">
     <tr>
         <td>Name</td>
+        <td>Roles</td>
         <td>Operation</td>
     </tr>
 
@@ -18,6 +19,9 @@
             <tr>
                 <td>
                     @item.Name
+                </td>
+                <td>
+                    <ShowRole user-id="@item.Id"></ShowRole>
                 </td>
                 <td>
                     <a asp-action="AssignRole" asp-route-id="@item.Id" class="btn btn-warning btn-sm"> Assign Role</a>
