--- a/Identity/Identity/Views/_ViewImports.cshtml
+++ b/Identity/Identity/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Identity.TagHelpers.*, Identity
 @using Identity.Models
 @using Identity.Context;
