role based authorization

--- a/Identity/Identity/Views/Shared/_Layout.cshtml
+++ b/Identity/Identity/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
                     </a>
                     <a asp-action="Index" asp-controller="Role" class="list-group-item list-group-item-action">Role Operations</a>
                     <a asp-action="UserList" asp-controller="Role" class="list-group-item list-group-item-action">User Operations</a>
-                    <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-                    <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
+                    <a asp-action="Index" asp-controller="Admin" class="list-group-item list-group-item-action">Admin Page</a>
+                    <a asp-action="Index" asp-controller="Developer" class="list-group-item list-group-item-action">Developer Page</a>
                 </div>
             </div>
             <div class="col-md-8">
