--- a/Identity/Identity/Views/Shared/_Layout.cshtml
+++ b/Identity/Identity/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
                     <a asp-action="UserList" asp-controller="Role" class="list-group-item list-group-item-action">User Operations</a>
                     <a asp-action="Index" asp-controller="Admin" class="list-group-item list-group-item-action">Admin Page</a>
                     <a asp-action="Index" asp-controller="Developer" class="list-group-item list-group-item-action">Developer Page</a>
+                    <a asp-action="Index" asp-controller="Female" class="list-group-item list-group-item-action">Female Page</a>
+                    <a asp-action="LogOut" asp-controller="Home" class="list-group-item list-group-item-action">Log Out</a>
                 </div>
             </div>
             <div class="col-md-8">
