--- a/Identity/Identity/Views/Role/UserList.cshtml
+++ b/Identity/Identity/Views/Role/UserList.cshtml
@@ -25,6 +25,7 @@
                 </td>
                 <td>
                     <a asp-action="AssignRole" asp-route-id="@item.Id" class="btn btn-warning btn-sm"> Assign Role</a>
+                    <a asp-action="AddClaim" asp-route-id="@item.Id" asp-controller="Female" class="btn btn-info btn-sm">Add Female Claim</a>
                 </td>
 
             </tr>
